Fix: scrollbar height on overflow-x

--- a/phone/src/Phone.css
+++ b/phone/src/Phone.css
@@ -54,6 +54,7 @@
 }
 *::-webkit-scrollbar {
   width: 3px;
+  height: 6px;
   background-color: transparent;
 }
 *::-webkit-scrollbar-thumb {
